[package]
name = "warp-example"
version = "0.1.0"
authors = ["dev flexbook <devflexbook@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
redis = "0.15.1"
futures = "0.3.4"